--- a/Python_OOP5_SpecialMethods.ipynb
+++ b/Python_OOP5_SpecialMethods.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "de561102",
    "metadata": {
     "deletable": false,
@@ -94,8 +94,22 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Employee('Corey', 'Schafer', 50000)\n",
+      "Corey Schafer - Corey.Schafer@email.com\n",
+      "110000\n",
+      "13\n"
+     ]
+    }
+   ],
    "source": [
+    "from sklearn.metrics import jaccard_score\n",
+    "\n",
+    "\n",
     "class Employee:\n",
     "    \n",
     "    raise_amount = 1.04\n",
@@ -106,26 +120,41 @@
     "        self.pay = pay\n",
     "        self.email = first + '.' + last + '@email.com'\n",
     "        \n",
-    "        Employee.num_of_emps += 1\n",
+    "        #Employee.num_of_emps += 1\n",
     "        \n",
     "    def fullname(self):\n",
     "        return '{} {}'.format(self.first, self.last)\n",
     "    \n",
     "    def apply_raise(self):\n",
     "        self.pay = int(self.pay * self.raise_amount)\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return \"Employee('{}', '{}', {})\".format(self.first, self.last, self.pay)\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return '{} - {}'.format(self.fullname(), self.email)\n",
+    "\n",
+    "    def __add__(self, other):\n",
+    "        return self.pay + other.pay\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.fullname())\n",
     "        \n",
-    "dev_1 = Employee('Corey', 'Schafer', 50000)\n",
-    "dev_2 = Employee('Test', 'User', 60000)\n",
+    "emp_1 = Employee('Corey', 'Schafer', 50000)\n",
+    "emp_2 = Employee('Test', 'User', 60000)\n",
     "\n",
-    "\n",
+    "print (emp_1.__repr__())\n",
+    "print (emp_1.__str__())\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "\n",
+    "print (emp_1 + emp_2)\n",
+    "print (len(emp_1))\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -139,7 +168,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
   }
  },
  "nbformat": 4,
