--- a/Python_OOP6_PropertyDecorators.ipynb
+++ b/Python_OOP6_PropertyDecorators.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "386ec815",
    "metadata": {
     "deletable": false,
@@ -94,25 +94,49 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corey\n",
+      "Corey.Schafer@email.com\n",
+      "Corey Schafer\n"
+     ]
+    }
+   ],
    "source": [
     "class Employee:\n",
     "    \n",
-    "    def __init__(self, first, last, pay):\n",
+    "    def __init__(self, first, last):\n",
     "        self.first = first\n",
     "        self.last = last\n",
-    "        \n",
+    "\n",
+    "\n",
+    "    @property\n",
+    "    def email(self):\n",
+    "        return '{}.{}@email.com'.format(self.first, self.last)\n",
+    "\n",
+    "\n",
+    "    @property\n",
     "    def fullname(self):\n",
     "        return '{} {}'.format(self.first, self.last)\n",
-    "          \n",
-    "emp_1 = Employee('John', 'Smith')\n",
+    "\n",
+    "    @fullname.setter\n",
+    "    def fullname(self, name):\n",
+    "        first, last = name.split(' ')\n",
+    "        self.first = first\n",
+    "        self.last = last \n",
+    "\n",
+    "emp_1 = Employee ('John', 'Smith')\n",
+    "\n",
+    "emp_1.fullname = 'Corey Schafer'\n",
     "\n",
     "print(emp_1.first)\n",
     "print(emp_1.email)\n",
-    "print(emp_1.fullname())\n",
+    "print(emp_1.fullname)\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# YOUR CODE HERE\n"
    ]
   },
   {
@@ -141,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "cc4234f2",
    "metadata": {
     "deletable": false,
@@ -157,45 +181,64 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Corey\n",
+      "Corey.Schafer@email.com\n",
+      "Corey Schafer\n",
+      "Delete Name!\n"
+     ]
+    }
+   ],
    "source": [
     "class Employee:\n",
     "    \n",
-    "    def __init__(self, first, last, pay):\n",
+    "    def __init__(self, first, last):\n",
     "        self.first = first\n",
     "        self.last = last\n",
-    "        self.email = first + '.' + last + '@email.com'\n",
-    "    \n",
+    "\n",
+    "\n",
     "    @property\n",
     "    def email(self):\n",
     "        return '{}.{}@email.com'.format(self.first, self.last)\n",
-    "        \n",
+    "\n",
+    "\n",
     "    @property\n",
     "    def fullname(self):\n",
     "        return '{} {}'.format(self.first, self.last)\n",
-    "    \n",
+    "\n",
     "    @fullname.setter\n",
     "    def fullname(self, name):\n",
     "        first, last = name.split(' ')\n",
     "        self.first = first\n",
     "        self.last = last\n",
-    "        \n",
-    "emp_1 = Employee('John', 'Smith')\n",
+    "    \n",
+    "    @fullname.deleter\n",
+    "    def fullname(self):\n",
+    "        print('Delete Name!')\n",
+    "        self.first = None\n",
+    "        self.last = None\n",
+    "\n",
+    "emp_1 = Employee ('John', 'Smith')\n",
     "\n",
     "emp_1.fullname = 'Corey Schafer'\n",
     "\n",
     "print(emp_1.first)\n",
     "print(emp_1.email)\n",
-    "print(emp_1.fullname())\n",
+    "print(emp_1.fullname)\n",
     "\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "del emp_1.fullname\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -209,7 +252,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
   }
  },
  "nbformat": 4,
